--- a/Dockerfile-solcmc
+++ b/Dockerfile-solcmc
@@ -1,30 +1,22 @@
-FROM ubuntu:20.04
+FROM archlinux:latest
 
 ARG ELDARICA_VERSION
 
 ENV TZ=America/Chicago
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
-RUN apt-get update && apt-get install -y gnupg
-
-RUN echo "deb http://ppa.launchpad.net/ethereum/cpp-build-deps/ubuntu focal main" >> /etc/apt/sources.list \
-    && apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 1c52189c923f6ca9 \
-    && apt-get update        \
-    && apt-get install -y \
-    wget                  \
-    zip                   \
-    default-jre-headless  \
-    curl                  \
-    git                   \
-		z3-static             \
-    && apt-get clean
+RUN pacman --noconfirm -Syu --noprogressbar --needed z3 git jre-openjdk-headless curl
 
 # Download nodejs and npm
 
-RUN curl -sL https://deb.nodesource.com/setup_16.x | bash -
-RUN    apt-get update               \
-    && apt-get upgrade --yes        \
-    && apt-get install --yes nodejs
+RUN touch ~/.bashrc
+#RUN curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash \
+#    && source ~/.bashrc \
+#    && nvm install node
+RUN pacman --noconfirm -S --noprogressbar nodejs npm
+
+RUN source ~/.bashrc
+RUN npm --version
 
 # Set up Eldarica
 
