--- a/Dockerfile-solcmc
+++ b/Dockerfile-solcmc
@@ -26,11 +26,19 @@ ENV PATH="/home/eldarica:$PATH"
 
 # Download solcjs and ts-node
 
+RUN npm install -g ts-node
+
+#COPY solc-js /home/solc-js
+
 RUN cd /home/                                                            \
-    && git clone --single-branch --branch cav_artifact https://github.com/ethereum/solc-js.git \
-    && cd /home/solc-js/                                                 \
-    && npm install                                                       \
-    && npm install -g ts-node
+    && git clone --branch cav_artifact https://github.com/ethereum/solc-js.git \
+#   && git clone --branch master https://github.com/ethereum/solc-js.git \
+   && cd /home/solc-js/                                                 \
+   && npm install                                                       \
+#   && npm install -g ts-node
+
+#RUN sed -i 's/const timeout = 10000;/const timeout = 3600000;/g' /home/solc-js/smtsolver.ts
+#RUN sed -i 's/rlimit=20000000//g' /home/solc-js/smtsolver.ts
 
 COPY run.ts /home/solc-js/
 COPY run_all_solvers.ts /home/solc-js/
