--- a/Dockerfile-solcmc
+++ b/Dockerfile-solcmc
@@ -34,7 +34,7 @@ RUN cd /home/                                                            \
     && git clone --branch cav_artifact https://github.com/ethereum/solc-js.git \
 #   && git clone --branch master https://github.com/ethereum/solc-js.git \
    && cd /home/solc-js/                                                 \
-   && npm install                                                       \
+   && npm install                                                       
 #   && npm install -g ts-node
 
 #RUN sed -i 's/const timeout = 10000;/const timeout = 3600000;/g' /home/solc-js/smtsolver.ts
